feat: add logging, resilience with circuit breaker